testdata/baselines/reference/submodule/conformance/ES5For-of34(target=es2015).errors.txt
error TS5102: Option 'downlevelIteration' has been removed. Please remove it from your configuration.
ES5For-of34.ts(4,6): error TS2322: Type 'string' is not assignable to type 'number'.


!!! error TS5102: Option 'downlevelIteration' has been removed. Please remove it from your configuration.
==== ES5For-of34.ts (1 errors) ====
    function foo() {
        return { x: 0 };
    }
    for (foo().x of ['a', 'b', 'c']) {
         ~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        var p = foo().x;
    }